Added CV link and rust link

--- a/22/partners.html
+++ b/22/partners.html
@@ -54,19 +54,18 @@
       </div>
     </header>
     <!-- Register Section -->
-    <!--<section id="register" class="section light">
+    <section id="register" class="section light">
       <div class="overlay"></div>
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
           <h5>Upload you CV now!</h5>
           <p>Are you new to the job market? Or maybe looking for a new challenge? Well, send us your curriculum vitae and every company present at SINFO 22 will receive it!</p>
       <br/>
-          <input type="file" id="upload" onchange="UploadFile();" name="upload" style="visibility: hidden; width: 1px; height: 1px" multiple />
-          <a href="" id="UploadCV" onclick="document.getElementById('upload').click();  return false" class="btn btn-sm btn-tertiary">Upload CV</a>
+          <a href="https://app.sinfo.org/me/edit" id="UploadCV" class="btn btn-sm btn-tertiary">Upload CV</a>
         </article>
       </div>
     </section>
-    -->
+
     <!-- End Register Section -->
     <!-- Sponsors Section -->
     <section id="partners" class="section dark">
