--- a/22/schedule.html
+++ b/22/schedule.html
@@ -357,6 +357,9 @@
                             <article>
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
+                              <div class=" center">
+                                <a href="https://app.sinfo.org/sessions/rust" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
+                              </div>
                               <!--<p class="author"><a href="speaker/JoshSnyder.html"><strong><i class="fa fa-user"></i> Josh Bleecher Snyder - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
                             </article>
                           </div>
@@ -633,6 +636,9 @@
                             <article>
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
+                              <div class=" center">
+                                <a href="https://app.sinfo.org/sessions/rust" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
+                              </div>
                               <!--<p class="author"><a href="speaker/JoshSnyder.html"><strong><i class="fa fa-user"></i> Josh Bleecher Snyder - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
                             </article>
                           </div>
