Added spekakers info and LIP ws and some links

--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -258,7 +258,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 14h00 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item9" class="collapsed">
-                               Phil Calçado
+                              <i>"Growing a startup — What happens (and what breaks) when you go from 500 to 500 million users?"</i> - Phil Calçado
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
