--- a/22/schedule.html
+++ b/22/schedule.html
@@ -925,6 +925,33 @@
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.10</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemFifteen2" class="collapsed">
+                              LIP and Linux
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="itemFifteen2" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p><b>Duration: </b>1h30</p>
+                              <p>details soon...</p>
+                              <div class=" center">
+                                <a href="https://app.sinfo.org/sessions/lip-and-linux-ws" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
+                              </div>
+                              <!--<p class="author"><strong><i class="fa fa-user"></i> Gonçalo Carvalho - Director e Pedro Dias - Senior Manager</strong></p>-->
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="ws-1" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.12</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item21" class="collapsed">
                               Big Data & Analytics - KPMG
@@ -1211,6 +1238,33 @@
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.10</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemFifteen1" class="collapsed">
+                              LIP and Linux
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="itemFifteen1" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p><b>Duration: </b>1h30</p>
+                              <p>details soon...</p>
+                              <div class=" center">
+                                <a href="https://app.sinfo.org/sessions/lip-and-linux-ws" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
+                              </div>
+                              <!--<p class="author"><strong><i class="fa fa-user"></i> Gonçalo Carvalho - Director e Pedro Dias - Senior Manager</strong></p>-->
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="ws-1" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.12</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemFifteen" class="collapsed">
                               Big Data & Analytics - KPMG
@@ -1224,6 +1278,9 @@
                             <article>
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
+                              <div class=" center">
+                                <a href="https://app.sinfo.org/sessions/big-data-and-analytics" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
+                              </div>
                               <p class="author"><strong><i class="fa fa-user"></i> Gonçalo Carvalho - Director e Pedro Dias - Senior Manager</strong></p>
                             </article>
                           </div>
@@ -1512,7 +1569,7 @@
                         <div id="item32" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>Details soon...</p>
+                              <p>Carlos Fonseca is an Executive IT Architect at IBM Thomas J. Watson Research Center. He is experienced in many of IBM, Microsoft, VMware, Oracle, Apple and open-source software products, standards, and technologies. This year Carlos is bringing to SINFO his newest project, a cloud-based platform for building, managing, and running apps of all types, such as web, mobile, big data, and smart devices.</p>
                               <p class="author"><a href="https://app.sinfo.org/speakers/carlos-fonseca"><strong><i class="fa fa-user"></i> Carlos Fonseca - Executive IT Architect at IBM Thomas J. Watson Research Center.</strong></a></p>
                             </article>
                           </div>
@@ -1527,7 +1584,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineThree" href="#item33">
-                              Adam Baldwin
+                              <i>"The world of security"</i> - Adam Baldwin
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                               <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Talk</div>
@@ -1537,7 +1594,7 @@
                         <div id="item33" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>Details soon...</p>
+                              <p>In is talk at SINFO 22 he plans to tell his story about getting into the security field, what he finds fascinating with it and some various technical bits about what is security, things that he has seen through out his career and research he has done specifically in node. He hope to inspire your inner hacker by the end of the talk.</p>
                               <p class="author"><a href="https://app.sinfo.org/speakers/adam-baldwin"><strong><i class="fa fa-user"></i> Adam baldwin - Chief Security Officer at &yet and Team Lead at ^lift security</strong></a></p>
                             </article>
                           </div>
@@ -1675,7 +1732,7 @@
                         <div id="itemEight" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>Details soon...</p>
+                              <p>Carlos Fonseca is an Executive IT Architect at IBM Thomas J. Watson Research Center. He is experienced in many of IBM, Microsoft, VMware, Oracle, Apple and open-source software products, standards, and technologies. This year Carlos is bringing to SINFO his newest project, a cloud-based platform for building, managing, and running apps of all types, such as web, mobile, big data, and smart devices.</p>
                               <p class="author"><a href="https://app.sinfo.org/speakers/carlos-fonseca"><strong><i class="fa fa-user"></i> Carlos Fonseca - Executive IT Architect at IBM Thomas J. Watson Research Center.</strong></a></p>
                             </article>
                           </div>
@@ -1690,7 +1747,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineThree" href="#itemNine">
-                              Adam Baldwin
+                              <i>"The world of security"</i> - Adam Baldwin
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -1699,7 +1756,7 @@
                         <div id="itemNine" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>Details soon...</p>
+                              <p>In is talk at SINFO 22 he plans to tell his story about getting into the security field, what he finds fascinating with it and some various technical bits about what is security, things that he has seen through out his career and research he has done specifically in node. He hope to inspire your inner hacker by the end of the talk.</p>
                               <p class="author"><a href="https://app.sinfo.org/speakers/adam-baldwin"><strong><i class="fa fa-user"></i> Adam baldwin - Chief Security Officer at &yet and Team Lead at ^lift security</strong></a></p>
                             </article>
                           </div>
