--- a/22/partners.html
+++ b/22/partners.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <!-- Register Section -->
-    <section id="register" class="section light">
+    <!--<section id="register" class="section light">
       <div class="overlay"></div>
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
@@ -64,7 +64,7 @@
           <a href="https://app.sinfo.org/me/edit" id="UploadCV" class="btn btn-sm btn-tertiary">Upload CV</a>
         </article>
       </div>
-    </section>
+    </section>-->
 
     <!-- End Register Section -->
     <!-- Sponsors Section -->
