Updated with links again

--- a/22/partners.html
+++ b/22/partners.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <!-- Register Section -->
-    <!--<section id="register" class="section light">
+    <section id="register" class="section light">
       <div class="overlay"></div>
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
@@ -64,7 +64,7 @@
           <a href="https://app.sinfo.org/me/edit" id="UploadCV" class="btn btn-sm btn-tertiary">Upload CV</a>
         </article>
       </div>
-    </section>-->
+    </section>
 
     <!-- End Register Section -->
     <!-- Sponsors Section -->
@@ -143,7 +143,7 @@
             <li><a href="http://www.canalsuperior.pt/" target="_blank"><img src="assets/img/sponsor/CanalSuperior.png" alt="sponsor-1"  /></a></li>
             <li><a href="http://wintech.pt/" target="_blank"><img src="assets/img/sponsor/wintech.png" alt="sponsor-1"  /></a></li>
             <li><a href="http://exameinformatica.sapo.pt/" target="_blank"><img src="assets/img/sponsor/exameinfo.png" alt="sponsor-1"  /></a></li>
-            <li><a href="http://cidade.iol.pt/" target="_blank"><img src="assets/img/sponsor/cidade.png" alt="sponsor-1"  /></a></li>
+            <!--<li><a href="http://cidade.iol.pt/" target="_blank"><img src="assets/img/sponsor/cidade.png" alt="sponsor-1"  /></a></li>-->
           </ul>
         </div>
       </div>
