Updated with another link

--- a/22/partners.html
+++ b/22/partners.html
@@ -143,7 +143,7 @@
             <li><a href="http://www.canalsuperior.pt/" target="_blank"><img src="assets/img/sponsor/CanalSuperior.png" alt="sponsor-1"  /></a></li>
             <li><a href="http://wintech.pt/" target="_blank"><img src="assets/img/sponsor/wintech.png" alt="sponsor-1"  /></a></li>
             <li><a href="http://exameinformatica.sapo.pt/" target="_blank"><img src="assets/img/sponsor/exameinfo.png" alt="sponsor-1"  /></a></li>
-            <!--<li><a href="http://cidade.iol.pt/" target="_blank"><img src="assets/img/sponsor/cidade.png" alt="sponsor-1"  /></a></li>-->
+            <li><a href="http://cidade.iol.pt/" target="_blank"><img src="assets/img/sponsor/cidade.png" alt="sponsor-1"  /></a></li>
           </ul>
         </div>
       </div>
