--- a/22/index.html
+++ b/22/index.html
@@ -317,27 +317,7 @@
     <!-- End Speakers Section -->
 
     <!-- App Section -->
-    <!--
-    <section id="app" class="section dark">
-      <div class="container">
-        <h3>SINFO App</h3>
-        <div class="sub-title" style="margin-top: 100px;">Sinfo app will be available sooon</div>
-      <br/>
-         <div class="row">
-          <ul class="list-inline">
-            <li><a href="#" target="_blank"><img src="assets/img/sponsor/play.jpg" alt="sponsor-7" /></a></li>
-            <li><a href="#" target="_blank"><img src="assets/img/sponsor/Store.jpg" alt="sponsor-8" /></a></li>
-            <li><a href="#" target="_blank"><img src="assets/img/sponsor/App.jpg" alt="sponsor-9" /></a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    -->
-    <!-- End App Section -->
-    <!-- Register Section -->
-    
-    <!--<section id="register" class="section light">
-      <div class="overlay"></div>
+    <!--<section id="app" class="section dark">
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
           <h5>Upload you CV now!</h5>
@@ -347,6 +327,20 @@
         </article>
       </div>
     </section>-->
+    <!-- End App Section -->
+    <!-- Register Section -->
+    
+    <section id="register" class="section light">
+      <div class="overlay"></div>
+      <div class="container">
+        <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
+          <h5>Upload you CV now!</h5>
+          <p>Are you new to the job market? Or maybe looking for a new challenge? Well, send us your curriculum vitae and every company present at SINFO 22 will receive it!</p>
+      <br/>
+          <a href="https://app.sinfo.org/me/edit" id="UploadCV" class="btn btn-sm btn-tertiary">Upload CV</a>
+        </article>
+      </div>
+    </section>
     <!-- End Register Section -->
     <!-- Sponsors Section -->
     <section id="partners" class="section dark">
