--- a/22/schedule.html
+++ b/22/schedule.html
@@ -2647,6 +2647,17 @@
         </div>-->
       </div>
     </section>
+    <section id="cal" class="section light">
+      <div class="overlay"></div>
+      <div class="container">
+        <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
+          <h5>Download Schedule!</h5>
+          <p>Sync your favorite calendar app with our schedule, and see every activity offline</p>
+        <br/>
+          <a href="files/calendar.ics"  target="_blank" id="UploadCV" class="btn btn-sm btn-tertiary" download>Download</a>
+        </article>
+      </div>
+    </section>   
         <!-- Sponsors Section -->
     <section id="partners" class="section dark">
       <div class="container">
