--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -153,7 +153,7 @@
                           <div class="panel-body">
                             <article>
                               <p>In the last few years open source has transformed the software industry. From Android to Wikipedia, open source is everywhere, but how does one succeed in it? While open source projects come in all shapes and sizes and all forms of governance, no matter what kind of project you’re a part of, there are a set of fundamentals that lead to success. I’d like to share some of the lessons I’ve learned from running two of the largest commercial open source projects, Docker and MongoDB, as well as some very successful community projects.</p>
-                              <p class="author"><a href="speaker/SteveFrancia.html"><strong><i class="fa fa-user"></i>Steve Francia - Chief Operator: Open Source at Docker</strong></a></p>
+                              <p class="author"><a href="https://app.sinfo.org/speakers/steve-francia"><strong><i class="fa fa-user"></i>Steve Francia - Chief Operator: Open Source at Docker</strong></a></p>
                             </article>
                           </div>
                         </div>
@@ -268,7 +268,7 @@
                           <div class="panel-body">
                             <article>
                               <p>details soon...</p>
-                              <p class="author"><a href="speaker/PhilCalcado.html"><strong><i class="fa fa-user"></i>Phil Calçado - Director of Engineering at SoundCloud</strong></a></p>
+                              <p class="author"><a href="https://app.sinfo.org/sessions/phil-calcado"><strong><i class="fa fa-user"></i>Phil Calçado - Director of Engineering at SoundCloud</strong></a></p>
                             </article>
                           </div>
                         </div>
@@ -530,7 +530,7 @@
                           <div class="panel-body">
                             <article>
                               <p>details soon...</p>
-                              <p class="author"><a href="speaker/AlbertoLopez.html"><strong><i class="fa fa-user"></i>Alberto López</strong></a></p>
+                              <p class="author"><a href="https://app.sinfo.org/sessions/alberto-lopez"><strong><i class="fa fa-user"></i>Alberto López</strong></a></p>
                             </article>
                           </div>
                         </div>
