--- a/22/partners.html
+++ b/22/partners.html
@@ -133,6 +133,8 @@
             <li><a href="https://mandrill.com/" target="_blank"><img src="assets/img/sponsor/Mandrill.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/link.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.goyouthconf.com/" target="_blank"><img src="assets/img/sponsor/goYouth.jpg" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            <li><a href="http://www.alfredo-jesus.com/home.php" target="_blank"><img src="assets/img/sponsor/alfredo.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            <li><a href="http://www.ordemengenheiros.pt/pt/a-ordem/sul/" target="_blank"><img src="assets/img/sponsor/OE.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
