--- a/22/partners.html
+++ b/22/partners.html
@@ -98,18 +98,18 @@
             <li style="width:23%"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.habber.com/" target="_blank"><img src="assets/img/sponsor/HabberTec.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="www.opensoft.pt/" target="_blank"><img src="assets/img/sponsor/opensoft.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="www.everis.com/portugal/pt-PT/home" target="_blank"><img src="assets/img/sponsor/Everis.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="www.unisys.pt/" target="_blank"><img src="assets/img/sponsor/Unisys.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.opensoft.pt/" target="_blank"><img src="assets/img/sponsor/opensoft.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.everis.com/portugal/pt-PT/home" target="_blank"><img src="assets/img/sponsor/Everis.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.unisys.pt/" target="_blank"><img src="assets/img/sponsor/Unisys.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.crossbordertalents.com/en" target="_blank"><img src="assets/img/sponsor/CBTIT.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Silver Partners</div>
         <div class="row">
           <ul class="list-inline">
-            <li><a href="www.growin.pt/" target="_blank"><img src="assets/img/sponsor/Growin.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://www.growin.pt/" target="_blank"><img src="assets/img/sponsor/Growin.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.glintt.com/" target="_blank"><img src="assets/img/sponsor/Glintt.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.runtime-revolution.com/runtime" target="_blank"><img src="assets/img/sponsor/runtime.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" alt="sponsor-1" /></a></li>
