--- a/22/partners.html
+++ b/22/partners.html
@@ -58,7 +58,7 @@
       <div class="overlay"></div>
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
-          <h5>Upload you CV now!</h5>
+          <h5>Upload your CV now!</h5>
           <p>Are you new to the job market? Or maybe looking for a new challenge? Well, send us your curriculum vitae and every company present at SINFO 22 will receive it!</p>
       <br/>
           <a href="https://app.sinfo.org/me/edit" id="UploadCV" class="btn btn-sm btn-tertiary">Upload CV</a>
