--- a/22/StartupRush.html
+++ b/22/StartupRush.html
@@ -195,13 +195,13 @@
                       </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
-                          <img src="assets/img/speaker/imaginary.jpg" class="img-responsive img-circle" alt="speaker-2" />
+                          <img src="assets/img/sponsor/talkdesk-logo.png" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 11h50 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item6" class="collapsed">
-                               Imaginary Cloud
+                               Talkdesk
                             <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -402,7 +402,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 9h30 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item18" class="collapsed">
-                               LunaCloud
+                               <i>"What is behind a cloud service provider?" </i> -  Hugo Tavares, CTO at LunaCloud
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -412,19 +412,20 @@
                           <div class="panel-body">
                             <article>
                               <p>details soon...</p>
+                              <p class="author"><strong><i class="fa fa-user"></i>Hugo Tavares - CTO at LunaCloud</strong></p>
                             </article>
                           </div>
                         </div>
                       </div>
                       <div class="panel panel-default">
-                        <div class="speaker-wrapper" style="width:120px; left: 30px;">
-                          <img src="assets/img/speaker/pharm.png" class="img-responsive img-circle" alt="speaker-2" />
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/sponsor/mobizy.webp" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 9h50 <div style="float: right"><i class="fa fa-map-marker"></i>Central Hall</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item19" class="collapsed">
-                               PharmAssistant  
+                               Mobizy
                                <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
