--- a/22/schedule.html
+++ b/22/schedule.html
@@ -865,31 +865,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- Speaker number Two -->
-                    <div class="panel panel-default">
-                      <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                        <img src="assets/img/speaker/gooseman.png" class="img-responsive img-circle" alt="speaker-2" />
-                      </div>
-                      <div class="panel-heading">
-                        <div class="panel-title">
-                          <div class="time"><i class="fa fa-clock-o"></i> 15h40 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
-                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item19">
-                            <i>"Challenges of developing a PC game in today's game industry"</i> - Minh Le
-                            <div class="pull-right fa fa-angle-up"></div>
-                            <div class="pull-right fa fa-angle-down"></div>
-                            <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Talk</div>
-                          </a>
-                        </div>
-                      </div>
-                      <div id="item19" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          <article>
-                            <p>This discussion will describe some of the challenges I faced when creating Counter-Strike, and my next game Tactical Intervention. It will go into detail the mistakes we made during the development of a multiplayer PC game.  I will  cover topics such as game development and game testing and marketing of the game. I will also go over using data analytics to help make the game more appealing to a broader audience.</p>
-                            <p class="author"><a href="https://app.sinfo.org/speakers/minh-le"><strong><i class="fa fa-user"></i> Minh "Gooseman" Le - Computer game developer and creator of Counter-Strike</strong></a></p>
-                          </article>
-                        </div>
-                      </div>
-                    </div>
                     <!-- Speaker number Three-->
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
@@ -897,7 +872,7 @@
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
+                            <div class="time"><i class="fa fa-clock-o"></i> 15h40 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item20">
                               "Red vs Blue: Implicações socio-políticas de um sistema bi-partidário"
                               <div class="pull-right fa fa-angle-up"></div>
@@ -909,7 +884,7 @@
                         <div id="item20" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p class="author"><strong><i class="fa fa-user"></i> Pedro Moreira Dias (Moderator) - Salão de Jogos/RFM</strong></p>
+                              <p class="author"><strong><i class="fa fa-user"></i> Pedro Moreira Dias (Moderator) - Salão de Jogos/Vodafone FM</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Ricardo Flores Santos - Biodroid</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Nuno Barreto - Titan Forged Games</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Nuno Folhadela - Bica Studios</strong></p>
@@ -919,6 +894,32 @@
                           </div>
                         </div>
                       </div>
+                      <!-- Speaker number Two -->
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/gooseman.png" class="img-responsive img-circle" alt="speaker-2" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item19">
+                              <i>"Challenges of developing a PC game in today's game industry"</i> - Minh Le
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                              <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Talk</div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="item19" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p>This discussion will describe some of the challenges I faced when creating Counter-Strike, and my next game Tactical Intervention. It will go into detail the mistakes we made during the development of a multiplayer PC game.  I will  cover topics such as game development and game testing and marketing of the game. I will also go over using data analytics to help make the game more appealing to a broader audience.</p>
+                              <p class="author"><a href="https://app.sinfo.org/speakers/minh-le"><strong><i class="fa fa-user"></i> Minh "Gooseman" Le - Computer game developer and creator of Counter-Strike</strong></a></p>
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                    
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
                           <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="ws-1" />
@@ -1038,30 +1039,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- Speaker number Two -->
-                    <div class="panel panel-default">
-                      <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                        <img src="assets/img/speaker/gooseman.png" class="img-responsive img-circle" alt="speaker-2" />
-                      </div>
-                      <div class="panel-heading">
-                        <div class="panel-title">
-                          <div class="time"><i class="fa fa-clock-o"></i> 15h40 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
-                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#itemFive">
-                            <i>"Challenges of developing a PC game in today's game industry"</i> - Minh Le
-                            <div class="pull-right fa fa-angle-up"></div>
-                            <div class="pull-right fa fa-angle-down"></div>
-                          </a>
-                        </div>
-                      </div>
-                      <div id="itemFive" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          <article>
-                            <p>This discussion will describe some of the challenges I faced when creating Counter-Strike, and my next game Tactical Intervention. It will go into detail the mistakes we made during the development of a multiplayer PC game.  I will  cover topics such as game development and game testing and marketing of the game. I will also go over using data analytics to help make the game more appealing to a broader audience.</p>
-                            <p class="author"><a href="https://app.sinfo.org/speakers/minh-le"><strong><i class="fa fa-user"></i> Minh "Gooseman" Le - Computer game developer and creator of Counter-Strike</strong></a></p>
-                          </article>
-                        </div>
-                      </div>
-                    </div>
                     <!-- Speaker number Three-->
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
@@ -1069,7 +1046,7 @@
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
+                            <div class="time"><i class="fa fa-clock-o"></i> 15h40 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#itemSix">
                               "Red vs Blue: Implicações socio-políticas de um sistema bi-partidário" - Debate
                               <div class="pull-right fa fa-angle-up"></div>
@@ -1080,12 +1057,36 @@
                         <div id="itemSix" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p class="author"><strong><i class="fa fa-user"></i> Pedro Moreira Dias (Moderator) - Salão de Jogos/RFM</strong></p>
+                              <p class="author"><strong><i class="fa fa-user"></i> Pedro Moreira Dias (Moderator) - Salão de Jogos/Vodafone FM</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Ricardo Flores Santos - Biodroid</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Nuno Barreto - Titan Forged Games</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Nuno Folhadela - Bica Studios</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Filipe Pina - Nerd Monkeys</strong></p>
                               <p class="author"><strong><i class="fa fa-user"></i> Sérgio Varanda - miniclip</strong></p>
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Speaker number Two -->
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/gooseman.png" class="img-responsive img-circle" alt="speaker-2" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#itemFive">
+                              <i>"Challenges of developing a PC game in today's game industry"</i> - Minh Le
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="itemFive" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p>This discussion will describe some of the challenges I faced when creating Counter-Strike, and my next game Tactical Intervention. It will go into detail the mistakes we made during the development of a multiplayer PC game.  I will  cover topics such as game development and game testing and marketing of the game. I will also go over using data analytics to help make the game more appealing to a broader audience.</p>
+                              <p class="author"><a href="https://app.sinfo.org/speakers/minh-le"><strong><i class="fa fa-user"></i> Minh "Gooseman" Le - Computer game developer and creator of Counter-Strike</strong></a></p>
                             </article>
                           </div>
                         </div>
