--- a/22/partners.html
+++ b/22/partners.html
@@ -95,7 +95,7 @@
             <li style="width:23%"><a href="http://www.rumos.pt/" target="_blank"><img src="assets/img/sponsor/rumos.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.sap.com/portugal/" target="_blank"><img src="assets/img/sponsor/SAP.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" alt="sponsor-1" /></a></li>
-            <li style="width:23%"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="https://www.randstadtech.pt/pt-PT/home.aspx" target="_blank"><img src="assets/img/sponsor/randstad.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.habber.com/" target="_blank"><img src="assets/img/sponsor/HabberTec.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="http://www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" alt="sponsor-1" /></a></li>
