--- a/22/schedule.html
+++ b/22/schedule.html
@@ -670,7 +670,7 @@
                           <li style="width:160px"><a href="http://www.itsector.pt/pt.aspx" target="_blank"><img src="assets/img/sponsor/ITsector.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px; margin-top: 20px"><a href="www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.glintt.com/" target="_blank"><img src="assets/img/sponsor/Glintt.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="https://www.randstadtech.pt/pt-PT/home.aspx" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
@@ -1340,7 +1340,7 @@
                           <li style="width:160px"><a href="http://www.itsector.pt/pt.aspx" target="_blank"><img src="assets/img/sponsor/ITsector.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px; margin-top: 20px"><a href="www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.glintt.com/" target="_blank"><img src="assets/img/sponsor/Glintt.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="ttps://www.randstadtech.pt/pt-PT/home.aspx" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
@@ -1677,7 +1677,16 @@
                           <div class="panel-body">
                             <article>
                               <p><b>Duration: </b>2h</p>
-                              <p>details soon...</p>
+                              <p>In this workshop about Critical Systems Development, there will be discussed topics such as:</p>
+                                <ul>
+                                  <li>What is Systems Engineering</li>
+                                  <li>How the different disciplines integrate themselves</li>
+                                  <li>The concept of Lifecycle</li>
+                                  <li>The safety concerns at system level</li>
+                                  <li>Standards in the different domains</li>
+                                </ul>
+                                <p> Material: </p>
+                                <p> [Optional] You can bring Enterprise Architect installed on your computer so you can see how we document projects during their life stages. </p>
                               <div class=" center">
                                 <a href="https://app.sinfo.org/sessions/critical-systems-development-itgrow" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
                               </div>
@@ -2000,7 +2009,16 @@
                           <div class="panel-body">
                             <article>
                               <p><b>Duration: </b>2h</p>
-                              <p>details soon...</p>
+                              <p>In this workshop about Critical Systems Development, there will be discussed topics such as:</p>
+                                <ul>
+                                  <li>What is Systems Engineering</li>
+                                  <li>How the different disciplines integrate themselves</li>
+                                  <li>The concept of Lifecycle</li>
+                                  <li>The safety concerns at system level</li>
+                                  <li>Standards in the different domains</li>
+                                </ul>
+                                <p> Material: </p>
+                                <p> [Optional] You can bring Enterprise Architect installed on your computer so you can see how we document projects during their life stages. </p>
                               <div class=" center">
                                 <a href="https://app.sinfo.org/sessions/critical-systems-development-itgrow" class="btn btn-sm btn-secondary" target="_blank" style="background: #0077AA; border-color: #0077AA; padding: 8px 25px; margin-bottom: 15px">Enroll</a>
                               </div>
