--- a/22/schedule.html
+++ b/22/schedule.html
@@ -1585,7 +1585,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 17h20 <div style="float: right"><i class="fa fa-map-marker"></i> Grand Amphitheater of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineThree" href="#item33">
-                              <i>"The world of security"</i> - Adam Baldwin
+                              <i>"Breaking Into Security"</i> - Adam Baldwin
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                               <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Talk</div>
